--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django==5.0.6
-djangorestframework==3.15.1
-celery==5.3.6
-redis==5.0.1
+Django>=5.2,<6.0
+djangorestframework>=3.20,<4.0
+celery>=5.5,<6.0
+redis>=5.0,<6.0
+python-decouple>=3.8,<4.0
