--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
